--- a/package.json
+++ b/package.json
@@ -1,82 +1,129 @@
 {
-    "name": "clean-architecture-csharp-snippets",
-    "publisher": "ivanpaulovich",
-    "displayName": "Clean Architecture C# Snippets",
-    "description": "Clean Architecture C# Snippets for Visual Studio Code",
-    "icon": "img/clean-architecture-snippets.png",
-    "version": "0.0.1",
-    "author": "Ivan Paulovich",
-    "license": "SEE LICENSE IN LICENSE.md",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/ivanpaulovich/CleanArchitectureVSCodeSnippets"
-    },
-    "categories": [
-        "Languages",
-        "Snippets"
-    ],
-    "keywords": [
-        "CleanArchitecture",
-        ".NET",
-        "C#",
-        "CSharp",
-        "Languages",
-        "Snippets"
-    ],
-    "contributors": [
-        {
-            "name": "Ivan Paulovich",
-            "url": "https://paulovich.net"
-        }
-    ],
-    "engines": {
-        "vscode": "^1.5.0"
-    },
-    "contributes": {
-        "snippets": [
-            {
-                "language": "csharp",
-                "path": "./src/csharp.json"
-            }
-        ],
-        "commands": [
-            {
-                "command": "extension.createEntity",
-                "title": "Create Entity"
-            }
-        ],
-        "menus": {
-            "explorer/context": [
-                {
-                    "when": "resourceFilename =~ /(.*Domain)/",
-                    "command": "extension.createEntity",
-                    "group": "YourGroup@1"
-                }
-            ]
-        }
-    },
-    "dependencies": {
-        "npm": "^6.14.5",
-        "vsce": "^1.76.1"
-    },
-    "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "vscode:package": "vsce package",
-        "vscode:publish": "vsce publish",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "jest",
-        "test:coverage": "jest --coverage",
-        "test:integration": "npm run compile && node ./node_modules/vscode/bin/test"
-    },
-    "devDependencies": {
-        "@types/jest": "^23.3.11",
-        "@types/node": "^10.12.18",
-        "jest": "^23.6.0",
-        "ts-jest": "^23.10.5",
-        "tslint": "^5.12.0",
-        "typescript": "^3.2.2",
-        "vscode": "^1.1.26"
+  "name": "clean-architecture-csharp-snippets",
+  "publisher": "ivanpaulovich",
+  "displayName": "Clean Architecture C# Snippets",
+  "description": "Clean Architecture C# Snippets for Visual Studio Code",
+  "icon": "img/clean-architecture-snippets.png",
+  "version": "0.0.1",
+  "author": "Ivan Paulovich",
+  "license": "SEE LICENSE IN LICENSE.md",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ivanpaulovich/CleanArchitectureVSCodeSnippets"
+  },
+  "categories": [
+    "Programming Languages",
+    "Snippets"
+  ],
+  "keywords": [
+    "CleanArchitecture",
+    ".NET",
+    "C#",
+    "CSharp",
+    "Languages",
+    "Snippets"
+  ],
+  "contributors": [
+    {
+      "name": "Ivan Paulovich",
+      "url": "https://paulovich.net"
     }
+  ],
+  "engines": {
+    "vscode": "^1.5.0"
+  },
+  "main": "./out/extension",
+  "activationEvents": [
+    "onLanguage:csharp",
+    "onCommand:extension.newEntity",
+    "onCommand:extension.newEntityInterface",
+    "onCommand:extension.newFactory",
+    "onCommand:extension.newService",
+    "onCommand:extension.newValueObject"
+  ],
+  "contributes": {
+    "snippets": [
+      {
+        "language": "csharp",
+        "path": "./src/csharp.json"
+      }
+    ],
+    "commands": [
+      {
+        "command": "extension.newEntity",
+        "title": "New Entity"
+      },
+      {
+        "command": "extension.newEntityInterface",
+        "title": "New Entity Interface"
+      },
+      {
+        "command": "extension.newFactory",
+        "title": "New Factory"
+      },
+      {
+        "command": "extension.newService",
+        "title": "New Service"
+      },
+      {
+        "command": "extension.newValueObject",
+        "title": "New Value Object"
+      }
+    ],
+    "menus": {
+      "explorer/context": [
+        {
+          "when": "resourceFilename =~ /(.*Domain)/",
+          "command": "extension.newEntity",
+          "group": "Domain@1"
+        },
+        {
+          "when": "resourceFilename =~ /(.*Domain)/",
+          "command": "extension.newEntityInterface",
+          "group": "Domain@1"
+        },
+        {
+          "when": "resourceFilename =~ /(.*Domain)/",
+          "command": "extension.newFactory",
+          "group": "Domain@1"
+        },
+        {
+          "when": "resourceFilename =~ /(.*Domain)/",
+          "command": "extension.newService",
+          "group": "Domain@1"
+        },
+        {
+          "when": "resourceFilename =~ /(.*Domain)/",
+          "command": "extension.newValueObject",
+          "group": "Domain@1"
+        }
+      ]
+    }
+  },
+  "dependencies": {
+    "npm": "^6.14.5",
+    "vsce": "^1.76.1",
+    "find-parent-dir": "^0.3.0",
+    "find-up-glob": "^1.0.0"
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "vscode:package": "vsce package",
+    "vscode:publish": "vsce publish",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:integration": "npm run compile && node ./node_modules/vscode/bin/test"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.11",
+    "@types/node": "^10.12.18",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2",
+    "vscode": "^1.1.26"
+  }
 }
