--- a/.vscodeignore
+++ b/.vscodeignore
@@ -10,5 +10,7 @@ tsconfig.json
 vsc-extension-quickstart.md
 tslint.json
 jest.config.js
-node_modules/
 coverage/**
+test/**
+tsconfig.json
+*.vsix
